--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.7.0",
     "react-modal": "^3.8.1",
     "sass-loader": "^7.1.0",
+    "smoothscroll": "^0.4.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
